--- a/templates/altic/mountainGame.html.twig
+++ b/templates/altic/mountainGame.html.twig
@@ -26,6 +26,7 @@
 	<div id="data" 
 		data-questionsanswers="{{ questionsAndAnswers|json_encode() }}"
 		data-images="{{ gameImages|json_encode() }}"
+		data-globallevel="{{ globalLevel }}"
 	></div>
 
 {% endblock %}
