continuation du traitement des données, envoi en base fonctionnel

--- a/templates/altic/mountainGame.html.twig
+++ b/templates/altic/mountainGame.html.twig
@@ -27,6 +27,8 @@
 		data-questionsanswers="{{ questionsAndAnswers|json_encode() }}"
 		data-images="{{ gameImages|json_encode() }}"
 		data-globallevel="{{ globalLevel }}"
+		data-locallevel="{{ localLevel }}"
+		data-table="{{ table }}"
 	></div>
 
 {% endblock %}
