--- a/templates/altic/endgame.html.twig
+++ b/templates/altic/endgame.html.twig
@@ -6,6 +6,12 @@
 
 {{ parent() }}
 
-{{ dump(gameData) }}
+{#{{ dump(gameData) }}#}
+
+{% if nbRightAnswers >= 8 %}
+Bravo, tu as {{ nbRightAnswers }} bonnes réponses !
+{% else %}
+Il faut encore faire des efforts, courage !
+{% endif %}
 
 {% endblock %}
