--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -118,7 +118,7 @@
 		<div class="col-sm-4"><p class="h5">Stastistiques</p>
 		Entraînements effectués : {{percentArray[12]}} <br>
 		Durée totale des entraînements : {{percentArray[13]}}h {{percentArray[14]}}mins <br>
-		Progression Totale = {{ percentArray[0]}}%
+		Progression Totale : {{ percentArray[0]}}%
 		<div class="progress">
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[0] }}%" aria-valuenow="{{ percentArray[0] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
