--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -41,16 +41,18 @@
 
     <!--stats-->
 	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
-		
 		<div class="col-sm-4">
 			<p class="h5">Trophées</p>
 			<img style="max-height: 100px; max-width: 100px;" src="{{ asset('images/pupil/characters/1.png') }}">Débloqué de base<br/><br/>
-			{% for trophy in hallOfTrophy %}
+			{% for trophy,isDone in hallOfTrophy %}
 			{% set obtention = trophy| split("") %}
-			<img style="max-height: 100px; max-width: 100px;" src="{{ asset('images/pupil/characters/'~trophy~'.png') }}">Debloque a la table {{obtention[0]}} au niveau {% if obtention[1]=="1" %}9{% else %}12{% endif %}<br/><br/>
+			{% if isDone%}
+			<img style="max-height: 100px; max-width: 100px;" src="{{ asset('images/pupil/characters/'~trophy~'.png') }}">Debloqué à la table {{obtention[0]}} au niveau {% if obtention[1]=="1" %}9{% else %}12{% endif %}<br/><br/>
+			{% else %}
+				<img style="max-height: 100px; max-width: 100px;-webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);-o-filter: grayscale(100%);-ms-filter: grayscale(100%);filter: grayscale(100%);" src="{{ asset('images/pupil/characters/'~trophy~'.png') }}">Se debloque {{obtention[0]}} au niveau {% if obtention[1]=="1" %}9{% else %}12{% endif %}<br/><br/>
+			{% endif %}
 			{% endfor %}
 		</div>
-
 		<div class="col-sm-4"><p class="h5">Stastistiques</p>
 		Entraînements effectués : {{percentArray[12]}} <br>
 		Durée totale des entraînements : {{percentArray[13]}}h {{percentArray[14]}}mins <br>
