--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -19,23 +19,44 @@
 
 	<br/>
 
-	<div class="row" style="background-image: url({{ asset('images/pupil/map/scrollTexture.png') }})">
+	<div id="map" class="row" style="background-image: url({{ asset('images/pupil/map/scrollTexture.png') }})">
 
 		<div class="col"></div>
 		<div class="col">
+
+			<img id="avatar" src="{{ asset('images/pupil/characters/' ~ profilePic) }}" style="position: absolute; z-index: 3; max-height: 3%;">
+
 			{% for i in 0..11 %}
 			{% if images[i] != 'startMAP.png' and images[i] != 'endMAP.png' and bCanPlay[i-1] == true %}
-				<a href="{{ path('altic_choiceAvatar', {
+				<a id="mapLink{{ i }}" href="{{ path('altic_choiceAvatar', {
 					tableNumber:tableNumber,levelNumber:levelsNumbers[i-1],mapName:images[i]
 				}) }}">
 					<img style="max-height: 200px;" src="{{ asset('images/pupil/map/' ~ images[i]) }}">
 				</a>
+				<script type="text/javascript" src="{{ asset('js/jquery-3.3.1.slim.min.js') }}"></script> 
+				<script type="text/javascript">
+					$(function () {
+						
+						$('#avatar').css({
+							left: '40%',
+							top: '{{ i * 9 }}%'
+						});
+
+					});
+				</script>
 			{% else %}
 				<img style="max-height: 200px;" src="{{ asset('images/pupil/map/' ~ images[i]) }}">
 			{% endif %}
 			{% endfor %}
 		</div>
 		<div class="col"></div>
+
+		<script type="text/javascript">
+			$(function () {
+				$('#map').css('background-size', $('#map').width() + 'px ' + (Number($('#map').height()) + 150) + 'px');
+				//alert($('#map').width() + ' ' + $('#map').height());
+			});
+		</script>
 
 	</div>
 
