--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -41,7 +41,7 @@
 
     <!--stats-->
 	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
-		<div class="col-sm-4">
+		<div class="col-sm-4 jumbotron">
 			<p class="h5">Trophées</p>
 			<div class="row">
 				<div class="col">
@@ -72,7 +72,7 @@
 			</div>
 			{% endfor %}
 		</div>
-		<div class="col-sm-4"><p class="h5">Stastistiques</p>
+		<div class="col-sm-4 jumbotron"><p class="h5">Stastistiques</p>
 		Entraînements effectués : {{percentArray[12]}} <br>
 		Durée totale des entraînements : {{percentArray[13]}}h {{percentArray[14]}}mins <br>
 		Progression Totale : {{ percentArray[0]}}%
