--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -130,12 +130,17 @@
 		
 	<!--ajoutEnseignant-->
 	<ul class="list-group">
+	{% set i = 0 %}
 	{% for teacher in teacherLynx %}
+		{% set i = i + 1 %}
 		<li class="list-group-item d-flex justify-content-between align-items-center">
 			{{ teacher.email }}
 			<a class="badge badge-primary badge-pill" href="removeTeacher/{{teacher.id}}">supprimer</a>
 		</li>
 	{% endfor %}
+	{% if i == 0 %}
+		<h4 style="color: white;">Aucun enseignant ne te suit !</h4>
+	{% endif %}
 	</ul>
 	<br><br>
 	{{form_start(addTeacher)}}
