mise en place des bonnes images de cartes dansles liens de retour

--- a/templates/altic/endgame.html.twig
+++ b/templates/altic/endgame.html.twig
@@ -13,7 +13,7 @@
 	<div class="row">
 		<a href="{{ path('altic_pupilTable', {number:tableNumber}) }}">
 			<p>Revenir à la table</p>
-			<img src="">
+			<img style="max-width: 20%;" src="{{ asset('images/pupil/map/tableMap.png') }}">
 		</a>
 	</div>
 	<!--results-->
