--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -11,7 +11,7 @@
 
 	<div class="row">
 		
-		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="max-height: 100px; width: auto;" src="{{ asset('images/pupil/map/tmpMap.png') }}"> </a></div>
+		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="max-height: 100px; width: auto;" src="{{ asset('images/pupil/map/worldMap.png') }}"> </a></div>
 
 		<div class="col-sm-4 align-self-center"><p style="text-align: center;" class="h3">Table de {{tableNumber}}</p></div>
 
