manual enseignant merge and Trophées -> Rois

--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -42,7 +42,7 @@
     <!--stats-->
 	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
 		<div class="col-sm-4 jumbotron">
-			<p class="h5">Trophées</p>
+			<p class="h5">Rois</p>
 			<div class="row">
 				<div class="col">
 					<img style="max-height: 100px; max-width: 100px;" src="{{ asset('images/pupil/characters/1.png') }}">
