mise en forme basique teacherWelcome et debugging

--- a/templates/altic/teacherWelcome.html.twig
+++ b/templates/altic/teacherWelcome.html.twig
@@ -6,4 +6,43 @@
 
 {{ parent() }}
 
+{#{ dump(pupils) }#}
+
+<div id="container">
+
+	<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">Nom</th>
+				<th scope="col">Table de 2</th>
+				<th scope="col">Table de 5</th>
+				<th scope="col">Table de 10</th>
+				<th scope="col">Table de 1</th>
+				<th scope="col">Table de 4</th>
+				<th scope="col">Table de 3</th>
+				<th scope="col">Table de 0</th>
+				<th scope="col">Table de 6</th>
+				<th scope="col">Table de 8</th>
+				<th scope="col">Table de 9</th>
+				<th scope="col">Table de 7</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for pupil in pupils %}
+
+				<tr class="table-dark">
+					<th scope="row">{{pupil[0]}}</th>
+				{% for i in 1..pupil|length - 1 %}
+
+      				<td>{{pupil[i]}} %</td>
+
+				{% endfor %}
+    			</tr>
+
+			{% endfor %}
+		</tbody>
+	</table>
+
+</div>
+
 {% endblock %}
