modif pour avoir un fond de jeu dynamique

--- a/templates/altic/game.html.twig
+++ b/templates/altic/game.html.twig
@@ -12,7 +12,7 @@
 {% set gameImages={
 	celestin: asset(celestinImg),
 	wizard: asset(wizardImg),
-	background: asset('images/pupil/games/mountain/01.png'),
+	background: asset('images/pupil/games/maps/' ~ map),
 	bubble: asset('images/pupil/games/mountain/04.png')
 } %}
 </head>
