modif mise en forme jeu

--- a/templates/altic/game.html.twig
+++ b/templates/altic/game.html.twig
@@ -13,7 +13,8 @@
 	celestin: asset(celestinImg),
 	wizard: asset(wizardImg),
 	background: asset('images/pupil/games/maps/' ~ map),
-	bubble: asset('images/pupil/games/mountain/04.png')
+	bubble: asset('images/pupil/games/mountain/04.png'),
+	parachute: asset('images/pupil/games/parachute.png')
 } %}
 </head>
 <body>
